# Perf

./: CMakeLists.txt  build.sh
ArraySum/: CMakeLists.txt  imageList.h  std_simmple_array.cpp
ArraySum/normal/: CMakeLists.txt
ArraySum/optimized/: CMakeLists.txt
Condition/: condition.cpp  condition.h  condition_exe.cpp
Condition/normal/: CMakeLists.txt
Condition/optimized/: CMakeLists.txt
src/: cpuclock.cpp  image.cpp  image.h  imageList.cpp  main.cpp
